@@ -1,3 +1,5 @@
+2015-08-11 1.1.2 Internal retries for HTTP connection added 
+
 2015-08-03 1.1.1 Postprocessing added (can be used to trigger media index)
 
 2015-06-05 1.1.0 Log output changed
